<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="helloworld2.theoneandonly.com.crazytipcalc.CrazyTipCalc"
    tools:showIn="@layout/activity_crazy_tip_calc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text_view"
        android:id="@+id/billTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|numberDecimal"
        android:ems="5"
        android:id="@+id/billEditText"
        android:text="@string/bill_edit_text"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toEndOf="@+id/billTextView"
        android:layout_marginStart="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:id="@+id/tipTextView"
        android:singleLine="true"
        android:layout_alignTop="@+id/billEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tipEditText"
        android:text="@string/tip_edit_text"
        android:ems="4"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView"
        android:layout_marginStart="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_text_view"
        android:id="@+id/finalBillTextView"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/billEditText"
        android:layout_alignEnd="@+id/tipTextView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/finalEditText"
        android:ems="5"
        android:text="@string/final_bill_edit_text"
        android:layout_below="@+id/finalBillTextView"
        android:layout_centerHorizontal="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipTextView"
        android:text="@string/change_tip_text_view"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/finalEditText"
        android:layout_marginEnd="25dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeTipseekBar"
        android:layout_marginTop="25dp"
        android:progress="15"
        android:layout_below="@+id/changeTipTextView"
        android:layout_alignStart="@+id/billEditText"
        android:layout_toStartOf="@+id/tipEditText"
        android:indeterminate="false" />

</RelativeLayout>
